add markdown cells to data_preparation notebook

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preparation and Topic Modeling\n",
+    "This notebook is for data preparation and LDA modeling. It scores the text by the LDA model.\n",
+    "\n",
+    "## Import Necessary Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,8 +44,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load City Dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,13 +171,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocess Text\n",
+    "\n",
+    "Tokenize, lemmatize, and stem all text summaries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_countries = list(combined_descriptions_df['city_summary'].map(preprocess))\n",
-    "processed_countries.extend(list(combined_descriptions_df['text'].map(preprocess)))"
+    "processed_city_summaries = list(combined_descriptions_df['city_summary'].map(preprocess))\n",
+    "processed_city_summaries.extend(list(combined_descriptions_df['text'].map(preprocess)))"
    ]
   },
   {
@@ -180,7 +206,14 @@
     }
    ],
    "source": [
-    "len(processed_countries)"
+    "len(processed_city_summaries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a bag of words of the `processed_city_summaries`."
    ]
   },
   {
@@ -189,7 +222,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictionary_bow = gensim.corpora.Dictionary(processed_countries)"
+    "dictionary_bow = gensim.corpora.Dictionary(processed_city_summaries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filters out any words that appear in less than 5 of the documents or more than 30% of the documents."
    ]
   },
   {
@@ -202,17 +242,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create corpus for the bag of words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bow_corpus = [dictionary_bow.doc2bow(country) for country in processed_countries]"
+    "bow_corpus = [dictionary_bow.doc2bow(summary) for summary in processed_city_summaries]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an LDA model with 5 topics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,40 +303,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# pickle.dump(lda_model, open('models/lda_model.pkl', 'wb'))\n",
-    "lda_model = pickle.load(open('models/lda_model.pkl', 'rb'))"
+    "For reproducability the model has been saved in a pickle file. The names I have given the topics are:\n",
+    "* Forest/Mountain\n",
+    "* Palace/Castle\n",
+    "* Water\n",
+    "* Historical\n",
+    "* Urban"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Topic: 0 \n",
-      "Words: 0.009*\"forest\" + 0.007*\"valley\" + 0.004*\"natur\" + 0.004*\"mountain\" + 0.004*\"bc\" + 0.004*\"rout\" + 0.003*\"abbey\" + 0.003*\"monument\" + 0.003*\"univers\" + 0.003*\"landscap\"\n",
-      "Topic: 1 \n",
-      "Words: 0.006*\"palac\" + 0.006*\"saint\" + 0.004*\"million\" + 0.004*\"host\" + 0.004*\"univers\" + 0.004*\"urban\" + 0.004*\"council\" + 0.003*\"mayor\" + 0.003*\"metropolitan\" + 0.003*\"institut\"\n",
-      "Topic: 2 \n",
-      "Words: 0.016*\"island\" + 0.005*\"bc\" + 0.005*\"lake\" + 0.004*\"empir\" + 0.004*\"mountain\" + 0.004*\"rule\" + 0.004*\"pope\" + 0.003*\"di\" + 0.003*\"provinc\" + 0.003*\"averag\"\n",
-      "Topic: 3 \n",
-      "Words: 0.006*\"camp\" + 0.005*\"prison\" + 0.005*\"speak\" + 0.005*\"unit\" + 0.004*\"beach\" + 0.004*\"cathol\" + 0.004*\"land\" + 0.004*\"alli\" + 0.004*\"island\" + 0.003*\"armi\"\n",
-      "Topic: 4 \n",
-      "Words: 0.008*\"univers\" + 0.007*\"school\" + 0.006*\"council\" + 0.006*\"club\" + 0.005*\"theatr\" + 0.005*\"festiv\" + 0.004*\"music\" + 0.004*\"compani\" + 0.004*\"bridg\" + 0.004*\"colleg\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for ind, topic in lda_model.print_topics(-1):\n",
-    "    print('Topic: {} \\nWords: {}'.format(ind, topic))"
+    "# pickle.dump(lda_model, open('models/lda_model.pkl', 'wb'))\n",
+    "lda_model = pickle.load(open('models/lda_model.pkl', 'rb'))"
    ]
   },
   {
@@ -307,6 +346,13 @@
    ],
    "source": [
     "lda_model[bow_corpus[228]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute aggregate scores for each city from the LDA scores for each summary."
    ]
   },
   {
@@ -749,8 +795,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge with the cities dataframe so that the topic scores can be identified with a specific city."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +1010,7 @@
        "9         0.170985  0.239295      0.197913        0.193964  0.197843  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,8 +1020,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean the city names to remove periods which do not cooperate with the NN model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1083,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1157,7 @@
        "179         0.197317  0.184111      0.225344        0.204712  0.188517  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1220,13 +1280,20 @@
        "max           0.244448    0.258152      0.268752        0.249102    0.250471"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cities_and_topics.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the topic scores in a pickle file for NN-model."
    ]
   },
   {
