add markdowns to collect_data notebook

--- a/collect_data.ipynb
+++ b/collect_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collection of Data from ricksteves.com"
+    "# Collection of Data from ricksteves.com and Wikipedia\n",
+    "\n",
+    "The notebook shows the steps I took to scrape data."
    ]
   },
   {
@@ -1015,6 +1017,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: I did run this cell below and effectively collected wikipedia data. However, I accidentally re-ran this cell, and interrupted this step before completion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1045,6 +1054,13 @@
    "outputs": [],
    "source": [
     "wiki_collection.find_one()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert wikipedia data to a dataframe."
    ]
   },
   {
@@ -1175,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1373,7 @@
        "9  5d1198ef6e7463927710e42f  \\nBruges (/bruːʒ/, French: [bʁyʒ]; Flemish: Br...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,6 +1555,13 @@
    ],
    "source": [
     "combined_descriptions_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the combined cities in a pickle file."
    ]
   },
   {
