add markdown cells to recommend notebook

--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this model will be to use a Nearest Neighbors approach. Will recommend the location that has the closest cosine similariy."
+    "# Recommend Cities\n",
+    "Using a Nearest Neighbors approach, recommends cities using Euclidean distance."
    ]
   },
   {
@@ -266,7 +267,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train NN-Model on Topic Scores"
+    "## Train NN-Model on Topic Scores\n",
+    "Collect the 50 closest neighbors. I used minkowski, p=2 since users are rating features implying magnitude. With cosine similarity, magnitude is not a factor. If cosine similarity was used, a user rating of all `1s` would give the same recommendations as a user rating of all `9s`."
    ]
   },
   {
@@ -313,7 +315,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make Recommendations"
+    "## Make Recommendations\n",
+    "\n",
+    "Collects user information to make recommendations."
    ]
   },
   {
@@ -359,7 +363,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determine strength of recommendations"
+    "## Determine strength of recommendations\n",
+    "Ask the user how they liked their recommendations."
    ]
   },
   {
